# cellMembrane

./: .gitignore  Cargo.toml  GLACIAL_SHIFT_TRACKER.md  IRONGATE_VERIFICATION.md  README.md  RUNBOOKS.md  VPS_STATE.md  deny.toml  forgejo_pull_mirror.sh  forgejo_sync.sh  membrane.toml  rustfmt.toml
.cargo/: config.toml
.cursor/: hooks.json
.cursor/hooks/: forgejo-mirror.sh
.forgejo/workflows/: ci.yml
config/: capability_registry.toml
crates/cellmembrane-types/: Cargo.toml
crates/cellmembrane-types/src/: arch.rs  caddy.rs  channels.rs  composition.rs  config.rs  credentials.rs  cytoplasm.rs  envelope.rs  error.rs  firewall.rs  gateway.rs  identity.rs  lib.rs  process.rs  provider.rs  service.rs  signal.rs  signing.rs  sync.rs  topology.rs  transport.rs  validation.rs  wireguard.rs
crates/cellmembrane-types/src/config/: mod.rs  validation.rs
crates/cellmembrane-types/src/service/: constants.rs  integrity.rs  mod.rs  registry.rs
crates/cellmembrane-types/tests/: channels.rs  composition.rs  config.rs  coverage.rs  envelope.rs  firewall.rs  identity.rs  integration.rs  provider.rs  service.rs  transport.rs  validation.rs
crates/membrane-shadow/: Cargo.toml  build.rs
crates/membrane-shadow/src/: bridge.rs  caddy.rs  cli.rs  cloudflare.rs  config.rs  context.rs  dispatch.rs  error.rs  forgejo.rs  freshness.rs  gate.rs  git_ops.rs  identity.rs  impulse.rs  jsonrpc.rs  lib.rs  main.rs  manifest.rs  plasmid.rs  relay.rs  resolve.rs  ribocipher.rs  service.rs  signal.rs  sovereignty_ledger.rs  ssh.rs  temporal.rs  topology.rs  webhook.rs
crates/membrane-shadow/src/caddy/: depot.rs  mod.rs  tls.rs
crates/membrane-shadow/src/cloudflare/: dns.rs  mod.rs
crates/membrane-shadow/src/dispatch/: content_dispatch.rs  data.rs  deploy_dispatch.rs  gate.rs  impulse.rs  infra.rs  mod.rs  plasmid_dispatch.rs  provision_dispatch.rs  relay_dispatch.rs  sign_dispatch.rs  sovereign.rs  temporal.rs
crates/membrane-shadow/src/forgejo/: mirrors.rs  mod.rs
crates/membrane-shadow/src/gate/: bootstrap.rs  crash_loop.rs  enroll.rs  health.rs  interface.rs  local.rs  mesh.rs  mod.rs  nucleus.rs  preflight.rs  sovereignty.rs  sporeprint.rs  systemd_units.rs  verify.rs  wg.rs
crates/membrane-shadow/src/gateway/: config.rs  mod.rs  shadow.rs
crates/membrane-shadow/src/impulse/: lifecycle.rs  mod.rs  parse.rs  policy.rs  primal.rs  sync.rs  types.rs
crates/membrane-shadow/src/manifest/: mod.rs  types.rs  validate.rs  wave.rs
crates/membrane-shadow/src/plasmid/: auto_fetch.rs  build.rs  canary.rs  canary_remote.rs  checksum.rs  depot.rs  depot_sync.rs  download.rs  drift.rs  fetch.rs  harvest.rs  harvest_manifest.rs  harvest_support.rs  integrity.rs  mod.rs  refresh.rs  sandbox.rs  signing.rs  toolchain.rs
crates/membrane-shadow/src/provision/: bootstrap.rs  digitalocean.rs  mod.rs  verify.rs
crates/membrane-shadow/src/temporal/: cascade.rs  mod.rs  nucleus_restart.rs  post_sync.rs  resolve.rs  sync_engine.rs  types.rs
crates/membrane-shadow/src/tower/: mod.rs  timer.rs
crates/membrane-shadow/src/webhook/: mod.rs  pipeline.rs
deploy/: provision-golgi.sh
deploy/hooks/cursor/: context-sense.sh
deploy/hooks/forgejo/: golgi-post-receive-ci.sh  golgi-post-receive-relay.sh
deploy/nm-dispatcher/: 99-mesh-reconnect
deploy/systemd/: esotericwebb-server.service  footprint-server.service  membrane-canary@.service  membrane-nucleus.target  membrane-nucleus@.service  membrane-sandbox@.service  plasmid-pipeline.service  plasmid-pipeline.timer  songbird-federation.service
deploy/systemd/user/: membrane-nucleus-nosocket@.service  membrane-nucleus@.service  songbird-federation.service
experiments/: 001_NUCLEUS_VPS_DEPLOY_VALIDATED.md
receipts/: receipt-key-generate-20260711-213814-593.json
specs/: CELLMEMBRANE_ARCHITECTURE.md  FIELDMOUSE_CONTRACT.md  K_DERM_TOPOLOGY.md  MEMBRANE_COMPOSITION_MODEL.md  MULTI_MEMBRANE_DEPLOYMENT.md  RELAY_TRUST_BOUNDARY.md
