# SPDX-License-Identifier: AGPL-3.0-or-later

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[workspace.lints.rust]
unsafe_code = "forbid"
