# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "cellmembrane-types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Typed domain models for cellMembrane deployment: channels, compositions, firewall, validation"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
