# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "membrane-shadow"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Sovereign shadow functions — typed Rust API for agentic golgiBody VPS control"

[[bin]]
name = "membrane"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { version = "1", features = ["process", "fs", "io-util", "macros", "net"] }
reqwest = { version = "0.12", features = ["json"], default-features = false, optional = true }
chrono = { version = "0.4", features = ["serde"] }
blake3 = { workspace = true }
cellmembrane-types = { path = "../cellmembrane-types", version = "0.1" }
sha2 = "0.11.0"
hmac = "0.13.0"

[dev-dependencies]

[features]
default = ["http", "cloudflare"]
http = ["reqwest/rustls-tls"]
cloudflare = ["http"]

[lints]
workspace = true
